# czi-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: error.rs  lib.rs  metadata.rs  parse.rs  reader.rs  types.rs
tests/: demo_fixture.rs
